--- a/index.html
+++ b/index.html
@@ -5,16 +5,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>How to pronounce kytu?</title>
 	<style>
-	body{
+	html, body {
+	    height:100%;
+	    margin:0;
+	}
+	.container{
 		text-align: center;
+		min-height: 100%;
 	}
 	.pronounce{
 		width: 500px;
+		height: 500px;
 		max-width: 100%;
 	}
 	</style>
 </head>
 <body>
+<div class="container">
 	<img class="pronounce" src="./kytu-kk-pronounce.png" alt="">
+	<div></div>
+	<audio controls>
+	  <source src="./kytu.mp3" type="audio/mpeg">
+	  Your browser does not support the audio tag.
+	</audio>
+</div>
 </body>
 </html>
