--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		min-height: 100%;
 	}
 	.pronounce{
-		width: 500px;
-		height: 500px;
-		max-width: 100%;
+		max-width: 500px;
+		height: auto;
+		width: 100%;
 	}
 	</style>
 </head>
